# rust-fundamentals

./: README.md  hello  hello.rs
diesel-intro/: .env  Cargo.toml  diesel.toml
diesel-intro/migrations/2024-07-06-100634_users/: up.sql
diesel-intro/migrations/2024-07-06-100646_loans/: down.sql  up.sql
diesel-intro/migrations/2024-07-24-052428_users/: up.sql
diesel-intro/migrations/2024-07-24-052434_loans/: up.sql
diesel-intro/migrations/2024-07-24-052436_loan_applicants/: down.sql  up.sql
diesel-intro/migrations/2024-07-24-052441_loan_repayments/: down.sql  up.sql
diesel-intro/migrations/2024-08-08-082450_available_loans/: down.sql  up.sql
diesel-intro/migrations/2024-08-08-082711_seed_available_loans/: down.sql  up.sql
diesel-intro/site/static/: style.css
diesel-intro/src/: db.rs  main.rs  schema.rs
diesel-intro/src/controllers/: available_loans.rs  home.rs  loans.rs  mod.rs  users.rs
diesel-intro/src/db_operations/: available_loans.rs  loans.rs  mod.rs  users.rs
diesel-intro/src/models/: app_state.rs  available_loans.rs  loan_applicants.rs  loan_repayments.rs  loans.rs  mod.rs  ui.rs  users.rs
diesel-intro/templates/: dashboard.html  index.html  loans.html  login.html  posts.html  register.html
math_with_rust/: Cargo.toml
rust_class_1/: Cargo.toml
rust_class_2/: Cargo.toml  readme.md
rust_class_2_assignment/: Cargo.toml
rust_class_3/: Cargo.toml
rust_class_4/: Cargo.toml
rust_class_6/: Cargo.toml
rust_class_7/: Cargo.toml
rust_class_8/: Cargo.toml
rust_class_one/: Cargo.toml  README.md
rust_class_two/: Cargo.toml
(+41 files in other folders)
