[package]
name = "diesel-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
actix-web="4.8.0"
actix-session = { version = "0.9.0", features = ["cookie-session"]}
actix-files = "0.6.6"
actix-web-lab = "0.20.2"
async-stream = "0.3.5"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.4.2"
log = "0.4.22"
bcrypt = "0.15.1"
askama = "0.12.1"
